# composer-rs

./: Cargo.toml  README.md
src/: composer_json.rs  composer_lock.rs  error.rs  lib.rs  main.rs
src/composer/: cache.rs  compiler.rs  composer.rs  factory.rs  installed_versions.rs  mod.rs  partial_composer.rs
tests/: all_functional_test.rs  application_test.rs  cache_test.rs  completion_functional_test.rs  composer_test.rs  config_test.rs  default_config_test.rs  documentation_test.rs  factory_test.rs  installed_versions_test.rs  installer_test.rs  mod.rs  test_case.rs
tests/advisory/: audit_config_test.rs  auditor_test.rs  mod.rs
tests/autoload/: autoload_generator_test.rs  class_loader_test.rs  mod.rs
tests/command/: about_command_test.rs  archive_command_test.rs  audit_command_test.rs  base_dependency_command_test.rs  bump_command_test.rs  check_platform_reqs_command_test.rs  clear_cache_command_test.rs  config_command_test.rs  diagnose_command_test.rs  dump_autoload_command_test.rs  exec_command_test.rs  fund_command_test.rs  global_command_test.rs  home_command_test.rs  init_command_test.rs  install_command_test.rs  licenses_command_test.rs  mod.rs  reinstall_command_test.rs  remove_command_test.rs  repository_command_test.rs  require_command_test.rs  run_script_command_test.rs  search_command_test.rs  self_update_command_test.rs  show_command_test.rs  status_command_test.rs  suggests_command_test.rs  update_command_test.rs  validate_command_test.rs
tests/config/: json_config_source_test.rs  mod.rs
tests/console/: html_output_formatter_test.rs  mod.rs
tests/dependency_resolver/: default_policy_test.rs  mod.rs  pool_builder_test.rs  pool_optimizer_test.rs  pool_test.rs  request_test.rs  rule_set_iterator_test.rs  rule_set_test.rs  rule_test.rs  security_advisory_pool_filter_test.rs  solver_test.rs  transaction_test.rs
tests/downloader/: archive_downloader_test.rs  download_manager_test.rs  file_downloader_test.rs  fossil_downloader_test.rs  (+6 more)
(+476 files in other folders)
