[package]
name = "composer-rs"
version = "0.1.0"
edition = "2024"
description = "An optimized Rust rewrite of PHP Composer"
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
license = "MIT"
repository = "https://github.com/zanderlewis/composer-rs"

[[bin]]
name = "composer"
path = "src/main.rs"

[lib]
name = "composer_rs"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream"] }

# Version parsing (semver-like but PHP-composer compatible)
semver = "1.0"

# Filesystem and paths
directories = "6.0"
dirs = "6.0"
walkdir = "2.5"
glob = "0.3"
tempfile = "3.19"
fs_extra = "1.3"

# Hashing
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

# Archive handling
zip = "2.2"
tar = "0.4"
flate2 = "1.1"
xz2 = "0.1"

# Git operations
git2 = "0.20"

# URL parsing
url = "2.5"

# Regex
regex = "1.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Terminal colors and formatting
colored = "3.0"
indicatif = "0.17"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process execution
which = "8.0"

# Base64 encoding
base64 = "0.22"

# HTTP caching
http-cache-semantics = "2.1"

# Parallel execution
rayon = "1.10"

# Password input
rpassword = "7.3"

# System info
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.19"
wiremock = "0.6"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
